deploy/k8s/reliably.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: reliably-app
  labels:
    app.kubernetes.io/name: reliably
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: reliably
  template:
    metadata:
      name: reliably-app
      labels:
        app.kubernetes.io/name: reliably
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app.kubernetes.io/name: reliably
      containers:
      - image: localhost:32000/reliably/app
        name: producer
        volumeMounts:
          - name: reliably-env
            mountPath: /home/svc/.env
            readOnly: true
            subPath: env-file
        ports:
        - containerPort: 8090
          protocol: TCP
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "1000m"
            memory: 512Mi
          requests:
            cpu: "100m"
            memory: 64Mi
        readinessProbe:
          httpGet:
            path: /health
            port: 8090
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 8090
          initialDelaySeconds: 5
      volumes:
        - name: reliably-env
          configMap:
            name: reliably-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

---
kind: Service
apiVersion: v1
metadata:
  name: reliably-app
  labels:
    app.kubernetes.io/name: reliably
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 8090
    targetPort: 8090
  selector:
    app.kubernetes.io/name: reliably

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reliably-app
  labels:
    app.kubernetes.io/name: reliably
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: reliably-app
              port:
                number: 8090
